fixed horizontal scrollbar on mobile, fixed roller link size

--- a/src/components/Roller.css
+++ b/src/components/Roller.css
@@ -29,13 +29,15 @@
     display: flex;
 }
 
-.roller-items svg {
+.roller-item {
     margin-left: 10vh;
 }
 
-.roller-container:hover {
-    animation-play-state: paused;
+.roller-item:hover {
+    transform: scale(1.2);
+    transition: 0.4s ease-out;
 }
+
 
 
 @keyframes scroll {
